--- a/shop.html
+++ b/shop.html
@@ -173,10 +173,9 @@
 	<div class="poster"><img src="artwork/home lana.png" style="width:100%;"></div><br>
 	<div class="slide" style="animation-duration:0.075s;animation-iteration-count:2;">
 	<h1>freebies galore..</h1></div>
-	<h3 style="margin:50px 100px;"><div class="text">
+	<h3 style="margin:50px 100px;">
 	<p>Looking to get some of my designs for yourself? Look no further! This is the right place, and surprise! It's all 100% free. I make no money from these posters. &lt;/3</p>
 	<p>Posters are available in <i>png</i> format.</p>
-	</div>
 	<img src="ZARA HAPIZ LOGO ICON.png" alt="" style="width:70px;"></h3>
 	<div class="ribbon" style="height:2.7em;"><div class="ribbon-text" style="font-size:2em;animation-duration:3s;">
 	"LA FLAME SAYS LET YOUR AMBITION CARRY YOU," - TRAVIS SCOTT, "<a href="https://open.spotify.com/track/2QeQNF182V61Im0QpjdVta?si=a678a45317e74c7d" style="color:var(--white);">RODEO</a>"
