--- a/gallery.html
+++ b/gallery.html
@@ -209,10 +209,9 @@
 	<div class="poster"><img src="artwork/willow small.png" style="width:100%;"></div><br>
 	<div class="slide" style="animation-duration:0.05s;animation-iteration-count:4;">
 	<h1>zara's artwork :)</h1></div>
-	<h3 style="margin:50px 100px;"><div class="text">
+	<h3 style="margin:50px 100px;">
 	<p>Welcome to my humble portfolio of some of my artwork. There's.. a lot... We've got a bunch of graphite drawings, some paintings, and some digital artwork. </p>
 	<p>Try <i style="cursor:pointer;" class="clicking">clicking</i> on the images. Something cool might happen! Don't expect much because I'm not a magician. Just a programmer. :)</p>
-	</div>
 	<img src="ZARA HAPIZ LOGO ICON.png" alt="" style="width:70px;"></h3>
 	<div class="ribbon" style="height:2.7em;"><div class="ribbon-text" style="font-size:2em;animation-duration:3s;">
 	"REACH FOR THE STARS, SO IF YOU FALL, YOU LAND ON A CLOUD," - KANYE WEST, "<a href="https://open.spotify.com/track/4iz9lGMjU1lXS51oPmUmTe?si=89973b8de93b4d4f" style="color:var(--white);">HOMECOMING</a>"
