--- a/index.html
+++ b/index.html
@@ -170,15 +170,15 @@
 	<h4 style="text-align:right;">I know love (feat. The Kid LAROI) - Tate McRae (click poster to play!) &#10240; &#10240; <i style="opacity:0.7;cursor:pointer;" onclick="pauseAudio5()">Pause</i></h4>
 	<br><br><h1 class="slide" style="animation-duration:0.137s;animation-iteration-count:2;">&gt;&gt;&gt;introduction<i>!</i></h1>
 	<h3 style="margin:50px 100px;">
-	<div class="text"><p>
+	<p>
 	Hey readers! I'm <i style="color:#3D84E1;">Zara Hapiz</i> and I'm an 18 year old graphic designer + aspiring computer/software engineer + all around <a href="art gallery.html">artist</a> + cool person. I'm a huge fan of hip-hop, rap, and 2000's R&amp;B <a href="https://open.spotify.com/user/b07rczbm9srn0ev6kfk0pdtra?si=785b4cbfa9b34115">music</a>. My favourite artists are 
 	<a href="https://open.spotify.com/artist/5K4W6rqBFWDnAN6FQUkS6x?si=XvrrZXUIRvOTV0t7dG85qw">Kanye West</a>, 
 	<a href="https://open.spotify.com/artist/0Y5tJX1MQlPlqiwlOH1tJY?si=Ax5aGF6uSEmjndkEi13HyA">Travis Scott</a>, and 
 	<a href="https://open.spotify.com/artist/7tYKF4w9nC0nq9CsPZTHyP?si=Yx6Y1TDPTcaz7eoOY-2FVQ">SZA</a>, 
-	just to name a few. I'm also into basketball and skateboarding, and I'm a debater (third speaker represent!). Hmm.. what else? I'm a sucker for <a href="https://letterboxd.com/nasilemakajis/">rom-coms</a>. I love math. And computer science. I am literally the epitome of nerdiness. But I promise I'm cool.</p></div>
-	<div class="text"><p>
+	just to name a few. I'm also into basketball and skateboarding, and I'm a debater (third speaker represent!). Hmm.. what else? I'm a sucker for <a href="https://letterboxd.com/nasilemakajis/">rom-coms</a>. I love math. And computer science. I am literally the epitome of nerdiness. But I promise I'm cool.</p>
+	<p>
 	Anyway, if you couldn't already tell, I programmed this website myself. Its main purpose is to obviously showcase my coding abilities, but besides that this also serves as a portfolio for my graphic design (check out the <a href="store.html">store</a>!). For students or curious people, feel free to click <i style="color:#3D84E1;">Ctrl+U</i>.
-	</p></div>
+	</p>
 	<img src="ZARA HAPIZ LOGO ICON.png" alt="" style="width:70px;">
 	</h3>
 			
@@ -189,14 +189,14 @@
 	<img src="artwork/home diet pepsi.png" alt="" class="poster" onclick="playAudio1()">
 	<h4 style="text-align:right;">Diet Pepsi - Addison Rae (click poster to play!) &#10240; &#10240; <i style="opacity:0.7;cursor:pointer;" onclick="pauseAudio1()">Pause</i></h4>
 	<br><br><h1 class="slide" style="animation-duration:0.136s;animation-iteration-count:4;">&gt;&gt;&gt;experience<i>!</i></h1><br>
-	<h2 style="margin-left:50px;"><div class="text">
+	<h2 style="margin-left:50px;">
 	<p>&rarr; Member of PERSADA's Arts Department (2022)</p>
 	<p>&rarr; Member of PERSADA's Graphics Department (2022-2025)</p>
 	<p>&rarr; Vice Secretary of SMKTM's Visual Art Club (2023)</p>
 	<p>&rarr; President of SMKTM's Visual Art Club (2024)</p>
 	<p>&rarr; SMKTM Girl Guides Graphic Designer (2024)</p>
 	<p>&rarr; Head of PERSADA's Graphics Department (2024-2025)</p>
-	</div></h2><br>
+	</h2><br>
 	<!-- <div class="carousel" style="animation:exp 10s linear infinite alternate;">
 		<div class="expcontainer">PERSADA's Arts Department (2022)</div>
 		<div class="expcontainer" style="background-color:var(--black);color:var(--white);">PERSADA's Graphics Department (2022-2024)</div>
@@ -352,5 +352,6 @@
 
     <!-- // Start the smooth scrolling animation loop -->
     <!-- smoothScroll(); -->
+	</script>
 </body>
 </html>
