--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<!-- <link rel="stylesheet" href="./textanimation.css"> -->
 <link rel="stylesheet" href="./zara's style.css">
 <link href="https://fonts.googleapis.com/css2?family=Fragment+Mono:ital@0;1&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Fragment+Mono:ital@0;1&family=Space+Grotesk:wght@300..700&family=VT323&display=swap" rel="stylesheet">
@@ -158,8 +157,8 @@
 	
 <!--MAIN-->	
 	<div class="progresscontainer"><div class="progressbar" id="progressbar"></div></div>
-	<img class="spin" style="position:absolute;left:1000px;top:300px;z-index:4;width:200px;" src="ZARA HAPIZ LOGO ICON.png" alt="">
-	<img class="spin" style="position:absolute;top:850px;left:50px;z-index:4;width:200px;" src="ZARA HAPIZ LOGO PINK ICON.png" alt="">
+	<img class="spin" style="position:absolute;left:1000px;top:300px;z-index:4;" src="ZARA HAPIZ LOGO ICON.png" alt="">
+	<img class="spin" style="position:absolute;top:850px;left:50px;z-index:4;" src="ZARA HAPIZ LOGO PINK ICON.png" alt="">
 	<h1 style="margin-top:150px;text-align:center;align:center;" class="titleslide">ZARA <i style="color:#F17F96;">HAPIZ</i></h1>
 			<div class="zaraslide"><img class="zara" src="zaraaaa2.png" alt=""></div>
 		<br>
@@ -169,7 +168,7 @@
 	<br>
 	<img src="artwork/home i know love.png" alt="" class="poster" onclick="playAudio5()">
 	<h4 style="text-align:right;">I know love (feat. The Kid LAROI) - Tate McRae (click poster to play!) &#10240; &#10240; <i style="opacity:0.7;cursor:pointer;" onclick="pauseAudio5()">Pause</i></h4>
-	<br><br><h1 class="slide" style="animation-duration:0.137s;animation-iteration-count:2;">&gt;&gt;&gt;introduction<i>!</i></h1>
+	<br><br><h1 class="slide" style="animation-duration:0.120s;animation-iteration-count:2;">&gt;&gt;&gt;introduction<i>!</i></h1>
 	<h3 style="margin:50px 100px;">
 	<p>
 	Hey readers! I'm <i style="color:#3D84E1;">Zara Hapiz</i> and I'm an 18 year old graphic designer + aspiring computer/software engineer + all around <a href="art gallery.html">artist</a> + cool person. I'm a huge fan of hip-hop, rap, and 2000's R&amp;B <a href="https://open.spotify.com/user/b07rczbm9srn0ev6kfk0pdtra?si=785b4cbfa9b34115">music</a>. My favourite artists are 
@@ -189,7 +188,7 @@
 	</audio>
 	<img src="artwork/home diet pepsi.png" alt="" class="poster" onclick="playAudio1()">
 	<h4 style="text-align:right;">Diet Pepsi - Addison Rae (click poster to play!) &#10240; &#10240; <i style="opacity:0.7;cursor:pointer;" onclick="pauseAudio1()">Pause</i></h4>
-	<br><br><h1 class="slide" style="animation-duration:0.136s;animation-iteration-count:4;">&gt;&gt;&gt;experience<i>!</i></h1><br>
+	<br><br><h1 class="slide" style="animation-duration:0.123s;animation-iteration-count:4;">&gt;&gt;&gt;experience<i>!</i></h1><br>
 	<h2 style="margin-left:50px;">
 	<p>&rarr; Member of PERSADA's Arts Department (2022)</p>
 	<p>&rarr; Member of PERSADA's Graphics Department (2022-2025)</p>
@@ -209,7 +208,7 @@
 	</audio>
 	<img src="artwork/home utopia.png" alt="" class="poster" onclick="playAudio4()">
 	<h4 style="text-align:right;">Utopia - Travis Scott (click poster to play!) &#10240; &#10240; <i style="opacity:0.7;cursor:pointer;" onclick="pauseAudio4()">Pause</i></h4>
-	<br><br><h1 class="slide" style="animation-duration:0.13s;animation-iteration-count:6;">&gt;&gt;&gt;logofolio<i>!</i></h1><br><br>
+	<br><br><h1 class="slide" style="animation-duration:0.12s;animation-iteration-count:6;">&gt;&gt;&gt;logofolio<i>!</i></h1><br><br>
 	<img src="ZARA HAPIZ LOGO PINK ICON.png" alt="" style="width:100px;z-index:0;position:fixed">
 	<div class="carousel">
 		<img src="logofolio/ZARA HAPIZ LOGO PINK.png" alt="">
@@ -354,8 +353,5 @@
     <!-- // Start the smooth scrolling animation loop -->
     <!-- smoothScroll(); -->
 	</script>
-	<!-- <script src='https://unpkg.co/gsap@3/dist/gsap.min.js'></script> -->
-	<!-- <script src='https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js'></script> -->
-	<!-- <script src='https://assets.codepen.io/16327/SplitText3.min.js'></script><script src="./textanimation.js"></script> -->
 </body>
 </html>
