--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<!-- <link rel="stylesheet" href="./textanimation.css"> -->
 <link rel="stylesheet" href="./zara's style.css">
 <link href="https://fonts.googleapis.com/css2?family=Fragment+Mono:ital@0;1&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Fragment+Mono:ital@0;1&family=Space+Grotesk:wght@300..700&family=VT323&display=swap" rel="stylesheet">
@@ -19,11 +20,6 @@
 
 	
 	/* INDEX SPECIFIC STUFF */
-	@media screen and (max-width: 830px) {
-		.zara {
-			width:50vw;
-		}
-	}
 	embed {
 		cursor: default;
 	}
@@ -130,6 +126,15 @@
 	cursor: pointer;
 	}
 	
+	@media screen and (max-width: 830px) {
+		.zara {
+			width:50vw;
+		}
+		h3 { p {
+			margin-left: -6vw;
+			margin-right: -5vw;
+		}}
+	}
 	
 </style>
 <!--END OF CSS CODES-->
@@ -353,5 +358,8 @@
     <!-- // Start the smooth scrolling animation loop -->
     <!-- smoothScroll(); -->
 	</script>
+	<!-- <script src='https://unpkg.co/gsap@3/dist/gsap.min.js'></script> -->
+	<!-- <script src='https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js'></script> -->
+	<!-- <script src='https://assets.codepen.io/16327/SplitText3.min.js'></script><script src="./textanimation.js"></script> -->
 </body>
 </html>
